--- a/src/components/core/DiceLanding/styles.module.css
+++ b/src/components/core/DiceLanding/styles.module.css
@@ -128,8 +128,12 @@
 
 /* 3D Dice */
 .diceContainer {
+  position: relative;
   perspective: 1000px;
   margin: 3rem 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .diceWrapper {
@@ -235,9 +239,10 @@
 /* Rolling text */
 .rollingText {
   position: absolute;
-  bottom: -40px;
+  top: 100%;
   left: 50%;
   transform: translateX(-50%);
+  margin-top: 0.75rem;
   font-size: 0.75rem;
   font-weight: 400;
   letter-spacing: 0.3em;
@@ -249,7 +254,7 @@
 
 @media (min-width: 640px) {
   .rollingText {
-    bottom: -45px;
+    margin-top: 1rem;
     font-size: 0.8rem;
   }
 }
@@ -262,16 +267,17 @@
 /* Result display */
 .result {
   position: absolute;
-  bottom: -100px;
+  top: 100%;
   left: 50%;
   transform: translateX(-50%);
+  margin-top: 1rem;
   text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 100%;
-  min-width: 200px;
+  width: max-content;
+  min-width: 150px;
 }
 
 .resultNumber {
@@ -285,7 +291,7 @@
 
 @media (min-width: 640px) {
   .result {
-    bottom: -110px;
+    margin-top: 1.25rem;
   }
 
   .resultNumber {
